Fix close on mobile

--- a/src/scss/_guide.scss
+++ b/src/scss/_guide.scss
@@ -197,9 +197,7 @@ body[data-state="guide-step-2"] {
   right: 60px;
   width: 2em;
   height: 2em;
-  background-color: transparent;
-  background-image: url(../content/svg/btn-close.svg);
-  background-size: 100%;
+  background: transparent url(../content/svg/btn-close.svg) no-repeat center / contain;
   border: 0;
   cursor: pointer;
   z-index: 30;
